--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#F63366"
-backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#F0F2F6"
-textColor="#262730"
+primaryColor="#ED217C"
+backgroundColor="#2D3047"
+secondaryBackgroundColor="#404464"
+textColor="#FFFD82"
 font="sans serif"
